--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "ai-phone",
+  "name": "ai-phone-1",
   "version": "1.0.0",
   "type": "module",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "ws": "^8.16.0"
   }
 }
