--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-phone-1",
+  "name": "ai-phone-final",
   "version": "1.0.0",
   "type": "module",
   "main": "index.js",
@@ -7,8 +7,8 @@
     "start": "node index.js"
   },
   "dependencies": {
-  "express": "^4.18.2",
-  "ws": "^8.16.0",
-  "form-data": "^4.0.0",
-  "ffmpeg-static": "^5.2.0"
+    "ws": "^8.16.0",
+    "form-data": "^4.0.0",
+    "ffmpeg-static": "^5.2.0"
+  }
 }
