--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "ws": "^8.16.0",
-    "ffmpeg-static": "^5.2.0"
-  }
+  "ws": "^8.16.0",
+  "form-data": "^4.0.0",
+  "ffmpeg-static": "^5.2.0",
+  "express": "^4.18.2"
 }
