--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "ws": "^8.16.0",
-    "ffmpeg-static": "^5.2.0",
-    
+    "ffmpeg-static": "^5.2.0"
   }
 }
